--- a/Makefile.target
+++ b/Makefile.target
@@ -310,6 +310,21 @@ ARLIBS=../libqemu_common.a libqemu.a $(HWLIB)
 
 endif # CONFIG_SOFTMMU
 
+#########################################################
+# S2E library
+
+ifdef CONFIG_S2E
+
+s2eobj-y = s2e/Base.o
+
+libs2e.a: $(s2eobj-y)
+
+$(s2eobj-y): QEMU_CXXFLAGS+=$(LLVM_CXXFLAGS) $(KLEE_CXXFLAGS)
+
+ARLIBS += libs2e.a
+
+endif
+
 obj-$(CONFIG_GDBSTUB_XML) += gdbstub-xml.o
 
 $(QEMU_PROG): $(obj-y) $(obj-$(TARGET_BASE_ARCH)-y) $(ARLIBS)
