--- a/Makefile.target
+++ b/Makefile.target
@@ -315,8 +315,8 @@ endif # CONFIG_SOFTMMU
 
 ifdef CONFIG_S2E
 
-s2eobj-y = s2e/Base.o
-
+#s2eobj-y = s2e/Base.o
+s2eobj-y =
 s2eobj-y += s2e/Configuration/ConfigurationManager.o s2e/Configuration/ConfigurationFile.o
 s2eobj-y += s2e/Interceptor/OperatingSystem.o
 s2eobj-y += s2e/QemuKleeGlue.o
