Added configure checks for lua and libsigc++-2.0.
git-svn-id: https://dslabpc10.epfl.ch/svn/src/s2e/trunk@8765 f94e2f5b-dfd8-4992-a279-46519bc7c46e

--- a/Makefile.target
+++ b/Makefile.target
@@ -325,7 +325,7 @@ s2eobj-y += s2e/Plugins/PluginInterface.o
 
 libs2e.a: $(s2eobj-y)
 
-$(s2eobj-y): QEMU_CXXFLAGS+=$(LLVM_CXXFLAGS) $(KLEE_CXXFLAGS)
+$(s2eobj-y): QEMU_CXXFLAGS+=$(LLVM_CXXFLAGS) $(S2E_CXXFLAGS)
 
 ARLIBS += libs2e.a
 
