--- a/Makefile.target
+++ b/Makefile.target
@@ -317,7 +317,7 @@ ifdef CONFIG_S2E
 
 #s2eobj-y = s2e/Base.o
 s2eobj-y =
-s2eobj-y += s2e/Configuration/ConfigurationManager.o s2e/Configuration/ConfigurationFile.o
+s2eobj-y += s2e/ConfigFile.o
 s2eobj-y += s2e/Interceptor/OperatingSystem.o
 s2eobj-y += s2e/QemuKleeGlue.o
 s2eobj-y += s2e/s2e.o
