Basic implementation of signal-based plugins API.
git-svn-id: https://dslabpc10.epfl.ch/svn/src/s2e/trunk@8861 f94e2f5b-dfd8-4992-a279-46519bc7c46e

--- a/Makefile.target
+++ b/Makefile.target
@@ -317,6 +317,7 @@ ifdef CONFIG_S2E
 
 #s2eobj-y = s2e/Base.o
 s2eobj-y =
+s2eobj-y += s2e/Plugin.o s2e/CorePlugin.o s2e/Plugins/ExamplePlugin.o
 s2eobj-y += s2e/ConfigFile.o
 s2eobj-y += s2e/Interceptor/OperatingSystem.o
 s2eobj-y += s2e/QemuKleeGlue.o
