--- a/Makefile.target
+++ b/Makefile.target
@@ -317,7 +317,7 @@ ifdef CONFIG_S2E
 
 #s2eobj-y = s2e/Base.o
 s2eobj-y =
-s2eobj-y += s2e/Plugins/Plugin.o s2e/Plugins/CorePlugin.o s2e/Plugins/Example.o
+s2eobj-y += s2e/Plugin.o s2e/Plugins/CorePlugin.o s2e/Plugins/Example.o
 s2eobj-y += s2e/Plugins/PluginInterface.o
 #s2eobj-y += s2e/Plugins/WindowsInterceptor/UserModeInterceptor.o
 #s2eobj-y += s2e/Plugins/WindowsInterceptor/WindowsPlugin.o
