Minimal code to detect module loads
git-svn-id: https://dslabpc10.epfl.ch/svn/src/s2e/trunk@8901 f94e2f5b-dfd8-4992-a279-46519bc7c46e

--- a/Makefile.target
+++ b/Makefile.target
@@ -319,7 +319,7 @@ ifdef CONFIG_S2E
 s2eobj-y =
 s2eobj-y += s2e/Plugin.o s2e/Plugins/CorePlugin.o s2e/Plugins/Example.o
 s2eobj-y += s2e/Plugins/PluginInterface.o
-#s2eobj-y += s2e/Plugins/WindowsInterceptor/UserModeInterceptor.o
+s2eobj-y += s2e/Plugins/WindowsInterceptor/WindowsMonitor.o
 #s2eobj-y += s2e/Plugins/WindowsInterceptor/WindowsPlugin.o
 #s2eobj-y += s2e/Plugins/WindowsInterceptor/WindowsImage.o
 #s2eobj-y += s2e/Plugins/WindowsInterceptor/WindowsSpy.o
