--- a/Makefile.target
+++ b/Makefile.target
@@ -319,6 +319,7 @@ ifdef CONFIG_S2E
 s2eobj-y =
 s2eobj-y += s2e/Plugin.o s2e/Plugins/CorePlugin.o s2e/Plugins/Example.o
 s2eobj-y += s2e/Plugins/PluginInterface.o
+s2eobj-y += s2e/Plugins/ModuleTransitionDetector.o
 s2eobj-y += s2e/Plugins/WindowsInterceptor/WindowsMonitor.o
 s2eobj-y += s2e/Plugins/WindowsInterceptor/UserModeInterceptor.o
 s2eobj-y += s2e/Plugins/WindowsInterceptor/KernelModeInterceptor.o
@@ -355,7 +356,8 @@ qemu-monitor.h: $(SRC_PATH)/qemu-monitor.hx
 
 clean:
 	rm -f *.o *.a *~ $(PROGS) nwfpe/*.o fpu/*.o
-	rm -f *.d */*.d tcg/*.o ide/*.o
+	rm -f *.d */*.d tcg/*.o ide/*.o 
+	find s2e/ -name \*.o -exec rm {} \;
 	rm -f qemu-options.h qemu-monitor.h gdbstub-xml.c
 
 install: all
