--- a/Makefile.target
+++ b/Makefile.target
@@ -360,6 +360,7 @@ clean:
 	rm -f *.o *.a *~ $(PROGS) nwfpe/*.o fpu/*.o
 	rm -f *.d */*.d tcg/*.o ide/*.o 
 	find s2e/ -name \*.o -exec rm {} \;
+	find s2e/ -name \*.d -exec rm {} \;
 	rm -f qemu-options.h qemu-monitor.h gdbstub-xml.c
 
 install: all
