Added -fno-inline for certain files. Bugfix for linux.
git-svn-id: https://dslabpc10.epfl.ch/svn/src/s2e/trunk@9401 f94e2f5b-dfd8-4992-a279-46519bc7c46e

--- a/Makefile.target
+++ b/Makefile.target
@@ -336,6 +336,8 @@ s2eobj-y += s2e/S2EExecutor.o s2e/S2EExecutionState.o
 s2eobj-y += s2e/S2E.o
 #s2eobj-y += s2e/Plugins/PluginInterface.o
 
+s2e/Plugins/BranchCoverage.o s2e/Plugins/WindowsInterceptor/WindowsMonitor.o: QEMU_CXXFLAGS+=-fno-inline
+
 libs2e.a: $(s2eobj-y)
 
 $(s2eobj-y): QEMU_CXXFLAGS+=$(LLVM_CXXFLAGS) $(S2E_CXXFLAGS)
