Resurect compilation without CONFIG_S2E.
git-svn-id: https://dslabpc10.epfl.ch/svn/src/s2e/trunk@9542 f94e2f5b-dfd8-4992-a279-46519bc7c46e

--- a/Makefile.target
+++ b/Makefile.target
@@ -350,6 +350,8 @@ endif
 
 obj-$(CONFIG_GDBSTUB_XML) += gdbstub-xml.o
 
+obj-y += savevm.o
+
 $(QEMU_PROG): $(KLEE_LIBFILES)
 
 $(QEMU_PROG): $(obj-y) $(obj-$(TARGET_BASE_ARCH)-y) $(ARLIBS)
