--- a/Makefile.target
+++ b/Makefile.target
@@ -323,6 +323,7 @@ s2eobj-y += s2e/Plugins/ModuleExecutionDetector.o
 s2eobj-y += s2e/Plugins/CodeSelector.o
 s2eobj-y += s2e/Plugins/BaseInstructions.o
 s2eobj-y += s2e/Plugins/BranchCoverage.o
+s2eobj-y += s2e/Plugins/ExecutionTrace.o
 s2eobj-y += s2e/Plugins/DataSelectors/DataSelector.o
 s2eobj-y += s2e/Plugins/DataSelectors/WindowsService.o
 s2eobj-y += s2e/Plugins/WindowsInterceptor/WindowsMonitor.o
