--- a/Makefile.target
+++ b/Makefile.target
@@ -371,8 +371,8 @@ qemu-monitor.h: $(SRC_PATH)/qemu-monitor.hx
 clean:
 	rm -f *.o *.a *~ $(PROGS) nwfpe/*.o fpu/*.o
 	rm -f *.d */*.d tcg/*.o ide/*.o 
-	find s2e/ -name \*.o -exec rm {} \;
-	find s2e/ -name \*.d -exec rm {} \;
+	if [ -d s2e ]; then find s2e -name \*.o -exec rm {} \; ; fi
+	if [ -d s2e ]; then find s2e -name \*.d -exec rm {} \; ; fi
 	rm -f qemu-options.h qemu-monitor.h gdbstub-xml.c
 
 install: all
