--- a/Makefile.target
+++ b/Makefile.target
@@ -326,6 +326,7 @@ s2eobj-y += s2e/Plugins/BranchCoverage.o
 s2eobj-y += s2e/Plugins/ExecutionTrace.o
 s2eobj-y += s2e/Plugins/DataSelectors/DataSelector.o
 s2eobj-y += s2e/Plugins/DataSelectors/WindowsService.o
+s2eobj-y += s2e/Plugins/DataSelectors/GenericDataSelector.o
 s2eobj-y += s2e/Plugins/WindowsInterceptor/WindowsMonitor.o
 s2eobj-y += s2e/Plugins/WindowsInterceptor/UserModeInterceptor.o
 s2eobj-y += s2e/Plugins/WindowsInterceptor/KernelModeInterceptor.o
