--- a/Makefile.target
+++ b/Makefile.target
@@ -342,6 +342,8 @@ s2eobj-y += s2e/S2E.o
 #s2eobj-y += s2e/Plugins/PluginInterface.o
 
 s2e/Plugins/BranchCoverage.o s2e/Plugins/WindowsInterceptor/WindowsMonitor.o: QEMU_CXXFLAGS+=-fno-inline
+s2e/Plugins/ExecutionTrace.o s2e/Plugins/DataSelectors/GenericDataSelector.o: QEMU_CXXFLAGS+=-fno-inline
+s2e/Plugins/CacheSim.o: QEMU_CXXFLAGS+=-fno-inline
 
 libs2e.a: $(s2eobj-y)
 
