--- a/Makefile.target
+++ b/Makefile.target
@@ -332,6 +332,7 @@ s2eobj-y += s2e/Plugins/WindowsInterceptor/UserModeInterceptor.o
 s2eobj-y += s2e/Plugins/WindowsInterceptor/KernelModeInterceptor.o
 s2eobj-y += s2e/Plugins/WindowsInterceptor/WindowsImage.o
 s2eobj-y += s2e/Plugins/CacheSim.o
+s2eobj-y += s2e/Plugins/PfProfiler.o
 s2eobj-y += s2e/sqlite3.o
 s2eobj-y += s2e/Database.o
 #s2eobj-y += s2e/Plugins/WindowsInterceptor/WindowsSpy.o
