--- a/Makefile.target
+++ b/Makefile.target
@@ -331,13 +331,16 @@ s2eobj-y += s2e/Plugins/WindowsInterceptor/WindowsMonitor.o
 s2eobj-y += s2e/Plugins/WindowsInterceptor/UserModeInterceptor.o
 s2eobj-y += s2e/Plugins/WindowsInterceptor/KernelModeInterceptor.o
 s2eobj-y += s2e/Plugins/WindowsInterceptor/WindowsImage.o
+s2eobj-y += s2e/Plugins/ExecutionTracers/ExecutionTracer.o
+s2eobj-y += s2e/Plugins/ExecutionTracers/ModuleTracer.o
+s2eobj-y += s2e/Plugins/ExecutionTracers/CallRetTracer.o
+s2eobj-y += s2e/Plugins/ExecutionTracers/EventTracer.o
 s2eobj-y += s2e/Plugins/CacheSim.o
 s2eobj-y += s2e/Plugins/PfProfiler.o
 s2eobj-y += s2e/sqlite3.o
 s2eobj-y += s2e/Database.o
 #s2eobj-y += s2e/Plugins/WindowsInterceptor/WindowsSpy.o
 s2eobj-y += s2e/ConfigFile.o
-s2eobj-y += s2e/QemuKleeGlue.o
 s2eobj-y += s2e/S2EExecutor.o s2e/S2EExecutionState.o s2e/S2EDeviceState.o
 s2eobj-y += s2e/S2E.o
 #s2eobj-y += s2e/Plugins/PluginInterface.o
