--- a/Makefile.target
+++ b/Makefile.target
@@ -335,6 +335,7 @@ s2eobj-y += s2e/Plugins/ExecutionTracers/ExecutionTracer.o
 s2eobj-y += s2e/Plugins/ExecutionTracers/ModuleTracer.o
 s2eobj-y += s2e/Plugins/ExecutionTracers/CallRetTracer.o
 s2eobj-y += s2e/Plugins/ExecutionTracers/EventTracer.o
+s2eobj-y += s2e/Plugins/ExecutionTracers/TestCaseGenerator.o
 s2eobj-y += s2e/Plugins/CacheSim.o
 s2eobj-y += s2e/Plugins/PfProfiler.o
 s2eobj-y += s2e/sqlite3.o
