--- a/Makefile.target
+++ b/Makefile.target
@@ -320,10 +320,11 @@ s2eobj-y =
 s2eobj-y += s2e/Plugin.o s2e/Plugins/CorePlugin.o s2e/Plugins/Example.o
 #s2eobj-y += s2e/Plugins/PluginInterface.o
 s2eobj-y += s2e/Plugins/ModuleExecutionDetector.o
-s2eobj-y += s2e/Plugins/CodeSelector.o
+#s2eobj-y += s2e/Plugins/CodeSelector.o
+s2eobj-y += s2e/Plugins/RawMonitor.o
 s2eobj-y += s2e/Plugins/BaseInstructions.o
 s2eobj-y += s2e/Plugins/BranchCoverage.o
-s2eobj-y += s2e/Plugins/ExecutionTrace.o
+#s2eobj-y += s2e/Plugins/ExecutionTrace.o
 s2eobj-y += s2e/Plugins/DataSelectors/DataSelector.o
 s2eobj-y += s2e/Plugins/DataSelectors/WindowsService.o
 s2eobj-y += s2e/Plugins/DataSelectors/GenericDataSelector.o
