--- a/Makefile.target
+++ b/Makefile.target
@@ -352,6 +352,7 @@ s2e/Plugins/BranchCoverage.o s2e/Plugins/WindowsInterceptor/WindowsMonitor.o: QE
 s2e/Plugins/ExecutionTrace.o s2e/Plugins/DataSelectors/GenericDataSelector.o: QEMU_CXXFLAGS+=-fno-inline
 s2e/Plugins/CacheSim.o s2e/Plugins/BaseInstructions.o: QEMU_CXXFLAGS+=-fno-inline
 s2e/Plugins/ExecutionTracers/CallRetTracer.o: QEMU_CXXFLAGS+=-fno-inline
+s2e/S2EExecutor.o: QEMU_CXXFLAGS+=-fno-inline
 
 libs2e.a: $(s2eobj-y)
 
