--- a/Makefile.target
+++ b/Makefile.target
@@ -337,8 +337,10 @@ s2eobj-y += s2e/Plugins/ExecutionTracers/ModuleTracer.o
 s2eobj-y += s2e/Plugins/ExecutionTracers/CallRetTracer.o
 s2eobj-y += s2e/Plugins/ExecutionTracers/EventTracer.o
 s2eobj-y += s2e/Plugins/ExecutionTracers/TestCaseGenerator.o
+s2eobj-y += s2e/Plugins/ExecutionTracers/MemoryTracer.o
 s2eobj-y += s2e/Plugins/CacheSim.o
 s2eobj-y += s2e/Plugins/PfProfiler.o
+s2eobj-y += s2e/Plugins/Debugger.o
 s2eobj-y += s2e/sqlite3.o
 s2eobj-y += s2e/Database.o
 #s2eobj-y += s2e/Plugins/WindowsInterceptor/WindowsSpy.o
