--- a/Makefile.target
+++ b/Makefile.target
@@ -322,6 +322,7 @@ s2eobj-y += s2e/Plugin.o s2e/Plugins/CorePlugin.o s2e/Plugins/Example.o
 s2eobj-y += s2e/Plugins/ModuleExecutionDetector.o
 #s2eobj-y += s2e/Plugins/CodeSelector.o
 s2eobj-y += s2e/Plugins/RawMonitor.o
+s2eobj-y += s2e/Plugins/FunctionMonitor.o
 s2eobj-y += s2e/Plugins/BaseInstructions.o
 s2eobj-y += s2e/Plugins/BranchCoverage.o
 #s2eobj-y += s2e/Plugins/ExecutionTrace.o
