--- a/Makefile.target
+++ b/Makefile.target
@@ -325,7 +325,6 @@ s2eobj-y += s2e/Plugins/RawMonitor.o
 s2eobj-y += s2e/Plugins/FunctionMonitor.o
 s2eobj-y += s2e/Plugins/BaseInstructions.o
 s2eobj-y += s2e/Plugins/BranchCoverage.o
-#s2eobj-y += s2e/Plugins/ExecutionTrace.o
 s2eobj-y += s2e/Plugins/DataSelectors/DataSelector.o
 s2eobj-y += s2e/Plugins/DataSelectors/WindowsService.o
 s2eobj-y += s2e/Plugins/DataSelectors/GenericDataSelector.o
@@ -339,6 +338,7 @@ s2eobj-y += s2e/Plugins/ExecutionTracers/CallRetTracer.o
 s2eobj-y += s2e/Plugins/ExecutionTracers/EventTracer.o
 s2eobj-y += s2e/Plugins/ExecutionTracers/TestCaseGenerator.o
 s2eobj-y += s2e/Plugins/ExecutionTracers/MemoryTracer.o
+s2eobj-y += s2e/Plugins/ExecutionTracers/InstructionCounter.o
 s2eobj-y += s2e/Plugins/CacheSim.o
 s2eobj-y += s2e/Plugins/PfProfiler.o
 s2eobj-y += s2e/Plugins/Debugger.o
