--- a/Makefile.target
+++ b/Makefile.target
@@ -342,6 +342,7 @@ s2eobj-y += s2e/Plugins/ExecutionTracers/InstructionCounter.o
 s2eobj-y += s2e/Plugins/CacheSim.o
 s2eobj-y += s2e/Plugins/PfProfiler.o
 s2eobj-y += s2e/Plugins/Debugger.o
+s2eobj-y += s2e/Plugins/SymbolicHardware.o
 s2eobj-y += s2e/sqlite3.o
 s2eobj-y += s2e/Database.o
 #s2eobj-y += s2e/Plugins/WindowsInterceptor/WindowsSpy.o
