--- a/Makefile.target
+++ b/Makefile.target
@@ -31,6 +31,7 @@ LIBS+=-lm
 kvm.o kvm-all.o: QEMU_CFLAGS+=$(KVM_CFLAGS)
 
 tcg/tcg-llvm.o: QEMU_CXXFLAGS+=$(LLVM_CXXFLAGS)
+tcg/SelectRemovalPass.o: QEMU_CXXFLAGS+=$(LLVM_CXXFLAGS)
 
 config-target.h: config-target.h-timestamp
 config-target.h-timestamp: config-target.mak
@@ -45,6 +46,7 @@ all: $(PROGS)
 libobj-y = exec.o translate-all.o cpu-exec.o translate.o
 libobj-y += tcg/tcg.o
 libobj-$(CONFIG_LLVM) += tcg/tcg-llvm.o
+libobj-$(CONFIG_LLVM) += tcg/SelectRemovalPass.o
 libobj-$(CONFIG_SOFTFLOAT) += fpu/softfloat.o
 libobj-$(CONFIG_NOSOFTFLOAT) += fpu/softfloat-native.o
 libobj-y += op_helper.o helper.o
