--- a/Makefile.target
+++ b/Makefile.target
@@ -31,7 +31,6 @@ LIBS+=-lm
 kvm.o kvm-all.o: QEMU_CFLAGS+=$(KVM_CFLAGS)
 
 tcg/tcg-llvm.o: QEMU_CXXFLAGS+=$(LLVM_CXXFLAGS)
-tcg/SelectRemovalPass.o: QEMU_CXXFLAGS+=$(LLVM_CXXFLAGS)
 
 config-target.h: config-target.h-timestamp
 config-target.h-timestamp: config-target.mak
@@ -46,7 +45,6 @@ all: $(PROGS)
 libobj-y = exec.o translate-all.o cpu-exec.o translate.o
 libobj-y += tcg/tcg.o
 libobj-$(CONFIG_LLVM) += tcg/tcg-llvm.o
-libobj-$(CONFIG_LLVM) += tcg/SelectRemovalPass.o
 libobj-$(CONFIG_SOFTFLOAT) += fpu/softfloat.o
 libobj-$(CONFIG_NOSOFTFLOAT) += fpu/softfloat-native.o
 libobj-y += op_helper.o helper.o
@@ -349,6 +347,7 @@ s2eobj-y += s2e/sqlite3.o
 s2eobj-y += s2e/Database.o
 #s2eobj-y += s2e/Plugins/WindowsInterceptor/WindowsSpy.o
 s2eobj-y += s2e/ConfigFile.o
+s2eobj-y += s2e/SelectRemovalPass.o
 s2eobj-y += s2e/S2EExecutor.o s2e/S2EExecutionState.o s2e/S2EDeviceState.o
 s2eobj-y += s2e/S2E.o
 #s2eobj-y += s2e/Slab.o s2e/x64.o #XXX: should also fix for 32 bits archs.
