--- a/Makefile.target
+++ b/Makefile.target
@@ -355,8 +355,13 @@ s2eobj-y += s2e/S2E.o
 
 s2e/Plugins/BranchCoverage.o s2e/Plugins/WindowsInterceptor/WindowsMonitor.o: QEMU_CXXFLAGS+=-fno-inline
 s2e/Plugins/ExecutionTrace.o s2e/Plugins/DataSelectors/GenericDataSelector.o: QEMU_CXXFLAGS+=-fno-inline
+s2e/Plugins/DataSelectors/DataSelector.o: QEMU_CXXFLAGS+=-fno-inline
+s2e/Plugins/RawMonitor.o s2e/Plugins/FunctionMonitor.o: QEMU_CXXFLAGS+=-fno-inline
 s2e/Plugins/CacheSim.o s2e/Plugins/BaseInstructions.o: QEMU_CXXFLAGS+=-fno-inline
+s2e/Plugins/Debugger.o: QEMU_CXXFLAGS+=-fno-inline
 s2e/Plugins/ExecutionTracers/CallRetTracer.o: QEMU_CXXFLAGS+=-fno-inline
+s2e/Plugins/ExecutionTracers/InstructionCounter.o: QEMU_CXXFLAGS+=-fno-inline
+s2e/Plugins/ExecutionTracers/TranslationBlockTracer.o: QEMU_CXXFLAGS+=-fno-inline
 s2e/S2EExecutor.o: QEMU_CXXFLAGS+=-fno-inline
 
 libs2e.a: $(s2eobj-y)
