Write S2E-related statistics to run.stats file.
git-svn-id: https://dslabpc10.epfl.ch/svn/src/s2e/trunk@15060 f94e2f5b-dfd8-4992-a279-46519bc7c46e

--- a/Makefile.target
+++ b/Makefile.target
@@ -348,7 +348,10 @@ s2eobj-y += s2e/Database.o
 #s2eobj-y += s2e/Plugins/WindowsInterceptor/WindowsSpy.o
 s2eobj-y += s2e/ConfigFile.o
 s2eobj-y += s2e/SelectRemovalPass.o
-s2eobj-y += s2e/S2EExecutor.o s2e/S2EExecutionState.o s2e/S2EDeviceState.o
+s2eobj-y += s2e/S2EExecutor.o
+s2eobj-y += s2e/S2EExecutionState.o
+s2eobj-y += s2e/S2EDeviceState.o
+s2eobj-y += s2e/S2EStatsTracker.o
 s2eobj-y += s2e/S2E.o
 #s2eobj-y += s2e/Slab.o s2e/x64.o #XXX: should also fix for 32 bits archs.
 #s2eobj-y += s2e/Plugins/PluginInterface.o
