Preliminary NDIS handlers
git-svn-id: https://dslabpc10.epfl.ch/svn/src/s2e/trunk@15130 f94e2f5b-dfd8-4992-a279-46519bc7c46e

--- a/Makefile.target
+++ b/Makefile.target
@@ -333,6 +333,8 @@ s2eobj-y += s2e/Plugins/WindowsInterceptor/BlueScreenInterceptor.o
 s2eobj-y += s2e/Plugins/WindowsInterceptor/UserModeInterceptor.o
 s2eobj-y += s2e/Plugins/WindowsInterceptor/KernelModeInterceptor.o
 s2eobj-y += s2e/Plugins/WindowsInterceptor/WindowsImage.o
+s2eobj-y += s2e/Plugins/WindowsApi/NdisHandlers.o
+
 s2eobj-y += s2e/Plugins/ExecutionTracers/ExecutionTracer.o
 s2eobj-y += s2e/Plugins/ExecutionTracers/ModuleTracer.o
 s2eobj-y += s2e/Plugins/ExecutionTracers/EventTracer.o
@@ -354,6 +356,7 @@ s2eobj-y += s2e/S2EExecutor.o
 s2eobj-y += s2e/S2EExecutionState.o
 s2eobj-y += s2e/S2EDeviceState.o
 s2eobj-y += s2e/S2EStatsTracker.o
+s2eobj-y += s2e/StateManager.o
 s2eobj-y += s2e/S2E.o
 #s2eobj-y += s2e/Slab.o s2e/x64.o #XXX: should also fix for 32 bits archs.
 #s2eobj-y += s2e/Plugins/PluginInterface.o
