Fixed bug related to stale cpu object cache Test suite for annotations Various fixes in the annotations
git-svn-id: https://dslabpc10.epfl.ch/svn/src/s2e/trunk@15192 f94e2f5b-dfd8-4992-a279-46519bc7c46e

--- a/roms/s2ebios/Makefile
+++ b/roms/s2ebios/Makefile
@@ -4,7 +4,7 @@ include ../../config-host.mak
 include $(SRC_PATH)/rules.mak
 
 VPATH=$(SRC_PATH)/roms/s2ebios
-S2E_BIOS_SOURCE=$(VPATH)/s2e-inst.asm $(VPATH)/s2e-bios-low.asm $(VPATH)/s2e-bios-up.asm $(VPATH)/s2e-test.asm $(VPATH)/init.asm
+S2E_BIOS_SOURCE=$(VPATH)/s2e-inst.asm $(VPATH)/s2e-bios-low.asm $(VPATH)/s2e-bios-up.asm $(VPATH)/s2e-test.asm $(VPATH)/init.asm  $(VPATH)/s2e-ndis-test.asm
 
 .PHONY : all clean build-all
 
