- Injection of symbolic OIDs for Query/SetInformation (refs #87) - Fixed incorrect determination of blocks that access symbolic registers - Support for forking on symbolic eip/memory offsets - Added test cases for symbolic memory offsets and new ndis annotations - Ported RevNIC searcher - Writing bitcode file at S2E exit
- Workaround for crashes on asynchronous I/O (refs #110)
- Fixed overflow when computing memory usage (refs #79)
- Fixed bug when reporting coverage
- Trace analyzer supports forks that involve more than two states
- onTlbMiss is now a SpecialFunctionHandler to avoid problems with symbolic offsets

git-svn-id: https://dslabpc10.epfl.ch/svn/src/s2e/trunk@15698 f94e2f5b-dfd8-4992-a279-46519bc7c46e

--- a/Makefile.target
+++ b/Makefile.target
@@ -347,6 +347,8 @@ s2eobj-y += s2e/Plugins/Debugger.o
 s2eobj-y += s2e/Plugins/SymbolicHardware.o
 s2eobj-y += s2e/Plugins/PollingLoopDetector.o
 s2eobj-y += s2e/Plugins/StateManager.o
+s2eobj-y += s2e/Plugins/Searchers/MaxTbSearcher.o
+
 s2eobj-y += s2e/sqlite3.o
 s2eobj-y += s2e/Database.o
 #s2eobj-y += s2e/Plugins/WindowsInterceptor/WindowsSpy.o
