Added plugin to bypass internal driver functions Some bug fixes
git-svn-id: https://dslabpc10.epfl.ch/svn/src/s2e/trunk@15743 f94e2f5b-dfd8-4992-a279-46519bc7c46e

--- a/Makefile.target
+++ b/Makefile.target
@@ -348,6 +348,7 @@ s2eobj-y += s2e/Plugins/Debugger.o
 s2eobj-y += s2e/Plugins/SymbolicHardware.o
 s2eobj-y += s2e/Plugins/PollingLoopDetector.o
 s2eobj-y += s2e/Plugins/StateManager.o
+s2eobj-y += s2e/Plugins/FunctionSkipper.o
 s2eobj-y += s2e/Plugins/Searchers/MaxTbSearcher.o
 
 s2eobj-y += s2e/sqlite3.o
