--- a/Makefile.target
+++ b/Makefile.target
@@ -336,6 +336,8 @@ s2eobj-y += s2e/Plugins/WindowsInterceptor/UserModeInterceptor.o
 s2eobj-y += s2e/Plugins/WindowsInterceptor/KernelModeInterceptor.o
 s2eobj-y += s2e/Plugins/WindowsInterceptor/WindowsImage.o
 s2eobj-y += s2e/Plugins/WindowsApi/NdisHandlers.o
+s2eobj-y += s2e/Plugins/WindowsApi/NtoskrnlHandlers.o
+s2eobj-y += s2e/Plugins/WindowsApi/Api.o
 
 s2eobj-y += s2e/Plugins/ExecutionTracers/ExecutionTracer.o
 s2eobj-y += s2e/Plugins/ExecutionTracers/ModuleTracer.o
